welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var longueurT = len(nums)
  for (i<- 0 to longueurT-1){
    if (nums(i) == lookingFor)
    	return i
  }
  return -1
}